# Undecided-rust-react

./: .gitignore  README.md  package-lock.json
actic_web_app_project/: .env  Cargo.toml
actic_web_app_project/src/: main.rs
actic_web_app_project/src/app/: error.rs  mod.rs  start.rs
actic_web_app_project/src/controller/: admin.rs  admin_doc.rs  mod.rs
actic_web_app_project/src/controller/manager/: manager_doc.rs  mod.rs
actic_web_app_project/src/controller/manager/auth/: auth.rs
actic_web_app_project/src/controller/manager/game_center/comments/: comments.rs  mod.rs
actic_web_app_project/src/controller/manager/managers/: mod.rs
actic_web_app_project/src/controller/manager/managers/avatar_audit/: mod.rs
actic_web_app_project/src/controller/manager/managers/captcha/: mod.rs
actic_web_app_project/src/controller/manager/permission/: permission.rs
actic_web_app_project/src/controller/manager/role/: mod.rs
actic_web_app_project/src/controller/manager/router/: router.rs
actic_web_app_project/src/controller/manager/upload/: mod.rs
actic_web_app_project/src/middleware/: auth_verify.rs  err_res_middleware.rs  mod.rs  response.rs
actic_web_app_project/src/nako/: auth.rs  connection.rs  embed.rs  mod.rs  once.rs
actic_web_app_project/src/routes/: admin.rs  manager.rs  mod.rs
actic_web_app_project/src/schema/: base_struct.rs  mod.rs  response.rs
actic_web_app_project/src/schema/modules/admin/: admin.rs  admin_response.rs  mod.rs
actic_web_app_project/src/schema/modules/manager/: manager.rs  manager_response.rs  mod.rs
actic_web_app_project/src/server/: admin.rs
actic_web_app_project/src/server/manager/: mod.rs
actic_web_app_project/src/server/manager/auth/: auth.rs
actic_web_app_project/src/server/manager/game_center/: mod.rs
actic_web_app_project/src/server/manager/managers/: mod.rs
actic_web_app_project/src/server/manager/market/: mod.rs
actic_web_app_project/src/server/manager/permissions/: mod.rs  permission.rs
actic_web_app_project/src/server/manager/role/: mod.rs
actic_web_app_project/src/server/manager/router/: mod.rs  router.rs
actic_web_app_project/src/utils/: email.rs  mod.rs  parse.rs  string_to_str.rs
bff/: .env  .env.development  (+5 more)
(+873 files in other folders)
