[package]
name = "actic_web_app_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
rust-embed = "6.6.1"
serde = { version = "1.0.178", features = ["derive"] }
log = "0.4.0"
env_logger = "0.9.0"
validators = { version = "0.24.3", features = ["serde"] }
mysql = "*"
dotenv = "0.15.0"
rust-ini = "0.19.0"
once_cell = "1.18.0"
derive_more = "0.99.17"
jsonwebtoken = "8"
# tokio = { version = "1", features = ["full"] }
actix-cors = "0.6.4"
actix-service = "2.0.2"
futures = "0.3.28"
futures-util = "0.3.28"
# actix-web-lab = "0.19.1"
# actix-web-httpauth = "0.8.0"
# rand = "0.8.5"
erased-serde = "0.3.25"
# bincode = "1.3.3"
# actix-http = "3.3.1"
serde_json = "1.0.97"
bytes = "1.4"
# pin-project = "1.1.0"
# diesel = { version = "2.1.0", features = ["mysql"] }
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
chrono = { version = "0.4.19", features = ["serde"] }

[dependencies.mysql_common]
features = ["chrono"]
