[package]
name = "actic_web_app_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
rust-embed = { version = "6.6.1", features = ["include-exclude"] }
serde = { version = "1.0.178", features = ["derive"] }
log = "0.4.0"
env_logger = "0.9.0"
validators = { version = "0.24.3", features = ["serde"] }
mysql = "*"
dotenv = "0.15.0"
rust-ini = "0.19.0"
once_cell = "1.18.0"
derive_more = "0.99.17"
jsonwebtoken = "8"
actix-cors = "0.6.4"
futures = "0.3.28"
futures-util = "0.3.28"
erased-serde = "0.3.25"
serde_json = "1.0.97"
bytes = "1.4"
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
chrono = { version = "0.4.19", features = ["serde"] }
actix-multipart = "0.6.0"
actix-files = "0.6.2"

[dependencies.mysql_common]
features = ["chrono"]
